--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 chrono = "0.4.42"
-fs_extra = "1.3.0"
+rayon = "1.11.0"
 regex = "1.12.2"
 sha2 = "0.10.9"
 sysinfo = "0.37.2"
