--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,6 @@ sysinfo = "0.37.2"
 tokio = { version = "1.40", features = ["full"] }
 uzers = "0.12.1"
 walkdir = "2.5.0"
-reqwest = { version = "0.12.24", features = ["json", "tokio-runtime"] }
+reqwest = { version = "0.12.24", features = ["json"] }
+serde_json = "1.0.145"
+
